Revive hammerjs & tap events

--- a/demo/components/busy/demo.component.html
+++ b/demo/components/busy/demo.component.html
@@ -4,6 +4,6 @@
   </div>
   <div style="margin:0.5em" class="vclLayoutFlex" [vclBusy]="isBusy" busyLabel="Loading...">
     Busy-on-demand container<br>
-    <button vcl-button (click)="makeBusy()" label="Make me busy"></button>
+    <button vcl-button (tap)="makeBusy()" label="Make me busy"></button>
   </div>
 </div>
