--- a/demo/components/growl/demo.component.html
+++ b/demo/components/growl/demo.component.html
@@ -9,8 +9,8 @@
 
 <br><br>
 
-<button vcl-button (click)="info()" label="An info message"></button><br><br>
-<button vcl-button (click)="success()" label="A success message"></button><br><br>
-<button vcl-button (click)="warning()" label="A warning"></button><br><br>
-<button vcl-button (click)="error()" label="An error message"></button><br><br>
-<button vcl-button (click)="custom()" label="A custom message"></button><br><br>
+<button vcl-button (tap)="info()" label="An info message"></button><br><br>
+<button vcl-button (tap)="success()" label="A success message"></button><br><br>
+<button vcl-button (tap)="warning()" label="A warning"></button><br><br>
+<button vcl-button (tap)="error()" label="An error message"></button><br><br>
+<button vcl-button (tap)="custom()" label="A custom message"></button><br><br>
