--- a/demo/components/link/link.component.html
+++ b/demo/components/link/link.component.html
@@ -1,6 +1,6 @@
 <h3>Link with action:</h3>
 <a vcl-link
-  (click)="someAction($event)"
+  (tap)="someAction($event)"
   [label]="'Trigger test action'"></a>
 <br><br>
 
