--- a/demo/components/store/store.component.html
+++ b/demo/components/store/store.component.html
@@ -3,7 +3,7 @@
   <div class="vclInputGroup">
     <input vcl-input [(ngModel)]="query">
     <span class="vclInputGroupButton">
-      <button vcl-button (click)="search()" class="vclSquare" appIcon="fa:search"></button>
+      <button vcl-button (tap)="search()" class="vclSquare" appIcon="fa:search"></button>
     </span>
   </div>
 
