--- a/demo/components/token/token.component.html
+++ b/demo/components/token/token.component.html
@@ -1,6 +1,6 @@
 <h3>single tokens:</h3>
 <vcl-token label="mytoken" [selected]="false" [removeable]="false" class="myclass"></vcl-token>
-<vcl-token label="mytoken2" [selected]="toggleSelect" (click)="doToggleSelect()" class="myclass2"></vcl-token>
+<vcl-token label="mytoken2" [selected]="toggleSelect" (tap)="doToggleSelect()" class="myclass2"></vcl-token>
 <vcl-token label="mytoken3" [selected]="false" [removeable]="true" (remove)="removeAlert()"></vcl-token>
 
 <br/>
