--- a/demo/components/alert/demo.component.html
+++ b/demo/components/alert/demo.component.html
@@ -1,13 +1,13 @@
-<button vcl-button (click)="message()" label="A message"></button><br><br>
-<button vcl-button (click)="messageWithTitle()" label="A title and a message"></button><br><br>
-<button vcl-button (click)="info()" label="An info"></button><br><br>
-<button vcl-button (click)="success()" label="A success"></button><br><br>
-<button vcl-button (click)="warning()" label="A warning"></button><br><br>
-<button vcl-button (click)="error()" label="An error"></button><br><br>
-<button vcl-button (click)="htmlMessage()" label="A html message"></button><br><br>
-<button vcl-button (click)="custom()" label="A custom info message"></button><br><br>
-<button vcl-button (click)="question()" label="A question"></button><br><br>
-<button vcl-button (click)="loader()" label="A loader"></button><br><br>
-<button vcl-button (click)="async()" label="An async request"></button><br><br>
-<button vcl-button (click)="retry()" label="Retrying an async request"></button><br><br>
-<button vcl-button (click)="inputText()" label="A text input"></button><br><br>
+<button vcl-button (tap)="message()" label="A message"></button><br><br>
+<button vcl-button (tap)="messageWithTitle()" label="A title and a message"></button><br><br>
+<button vcl-button (tap)="info()" label="An info"></button><br><br>
+<button vcl-button (tap)="success()" label="A success"></button><br><br>
+<button vcl-button (tap)="warning()" label="A warning"></button><br><br>
+<button vcl-button (tap)="error()" label="An error"></button><br><br>
+<button vcl-button (tap)="htmlMessage()" label="A html message"></button><br><br>
+<button vcl-button (tap)="custom()" label="A custom info message"></button><br><br>
+<button vcl-button (tap)="question()" label="A question"></button><br><br>
+<button vcl-button (tap)="loader()" label="A loader"></button><br><br>
+<button vcl-button (tap)="async()" label="An async request"></button><br><br>
+<button vcl-button (tap)="retry()" label="Retrying an async request"></button><br><br>
+<button vcl-button (tap)="inputText()" label="A text input"></button><br><br>
