--- a/src/ng-vcl/token/tokenlist.component.html
+++ b/src/ng-vcl/token/tokenlist.component.html
@@ -2,4 +2,4 @@
  [(selected)]="token.selected"
  [(removeable)]="token.removeable"
  [label]="token.label"
- (click)="token.selected=!token.selected;change();"></vcl-token>
+ (tap)="token.selected=!token.selected;change();"></vcl-token>
