--- a/demo/components/growl/demo.component.html
+++ b/demo/components/growl/demo.component.html
@@ -1,4 +1,4 @@
-<vcl-button-group [(selectedIndex)]="position" mode="single">
+<vcl-button-group [(ngModel)]="position" mode="single">
   <button vcl-button label="Top Right"></button>
   <button vcl-button label="Top"></button>
   <button vcl-button label="Top Left"></button>
