radio-button: improvements

--- a/src/ng-vcl/radio-button/radio-button.component.html
+++ b/src/ng-vcl/radio-button/radio-button.component.html
@@ -1,3 +1,4 @@
-<vcl-icon [icon]="icon" *ngIf="labelPosition=='right'"></vcl-icon>
+<vcl-icon [icon]="checked ? checkedIcon : uncheckedIcon" *ngIf="labelPosition=='right'"></vcl-icon>
+<label vcl-form-control-label *ngIf="label" [label]="label"></label>
 <ng-content></ng-content>
-<vcl-icon [icon]="icon" *ngIf="labelPosition=='left'"></vcl-icon>
+<vcl-icon [icon]="checked ? checkedIcon : uncheckedIcon" *ngIf="labelPosition=='left'"></vcl-icon>
