[plotly]: setTimeout fix in ngAfterViewInit; [popover]: update

--- a/demo/components/plotly/demo.component.html
+++ b/demo/components/plotly/demo.component.html
@@ -1,1 +1,6 @@
-<vcl-plotly [data]="data" [layout]="layout" [elementId]="'myDiv1'" [class]="'customClass'"></vcl-plotly>
+<vcl-plotly
+  [elementId]="elementId"
+  [plotClass]="customClass"
+  [data]="data"
+  [layout]="layout">
+</vcl-plotly>
