[popover]: remove 'style.visibility', use '@popoverState' animation

--- a/src/ng-vcl/popover/popover.component.html
+++ b/src/ng-vcl/popover/popover.component.html
@@ -7,7 +7,7 @@
   [target]="target"
   [targetAttachment]="targetAttachment"
   [attachment]="attachment">
-  <div [ngStyle]="style" [@popOverState]="state"
+  <div [ngStyle]="style" [@popoverState]="state"
   (offClick)="offClick()">-->
     <ng-content></ng-content>
 
