demo: minor fixes/updates

--- a/demo/components/form/form.component.html
+++ b/demo/components/form/form.component.html
@@ -29,8 +29,7 @@
 
 
   <br/><br/> Slider: <br/>
-  <vcl-slider [min]="0" [max]="100" [step]="20" [round]="0"
-  [value]="30" [scaleNames]="customScaleNames2" ngModel name="slider" [stepsOnly]="false">
+  <vcl-slider [min]="0" [max]="100" [step]="20" [value]="30" [scale]="customScaleNames2" ngModel name="slider" [stepsOnly]="false">
   </vcl-slider>
 
 
@@ -92,8 +91,7 @@
   </div>
 
   <br/><br/> Slider: <br/>
-  <vcl-slider [min]="0" [max]="100" [step]="20" [round]="0"
-  [value]="30" [scaleNames]="customScaleNames2" formControlName="slider" [stepsOnly]="false">
+  <vcl-slider [min]="0" [max]="100" [step]="20" [value]="30" [scale]="customScaleNames2" formControlName="slider" [stepsOnly]="false">
   </vcl-slider>
 
 
