link: fixes & optimizations

--- a/demo/components/link/link.component.html
+++ b/demo/components/link/link.component.html
@@ -1,39 +1,30 @@
 <h3>Link with action:</h3>
-<a vcl-link
-  (tap)="someAction($event)"
-  [label]="'Trigger test action'"></a>
+<a vcl-link (tap)="someAction($event)" [label]="'Trigger test action'"></a>
 <br><br>
 
 <h3>href attribute only (label is automatically created):</h3>
-<a vcl-link
-  [href]="'http://www.example.com'"></a>
+<a vcl-link [href]="'http://www.example.com'"></a>
 <br><br>
 
-<h3>Label and prepended icon:</h3>
+<h3>Label with an appended icon (uses vcl-icogram):</h3>
 <a vcl-link
-  [href]="'#'"
-  [label]="'Example Link'"
-  [prepIcon]="'fa:chevron-right'"></a>
+  [label]="'Example external Link'"
+  [href]="'https://github.com/ng-vcl/ng-vcl'"
+  [appIcon]="'fa:external-link'"
+  [target]="'_blank'"></a>
 <br><br>
 
 <h3>Disabled link:</h3>
 <a vcl-link
-  [disabled]="true"
-  [href]="'this is not considered as the link is disabled'"
-  [label]="'Disabled link'"></a>
-<br><br>
-
-<h3>Link with target _blank:</h3>
-<a vcl-link
-  [href]="'https://github.com/ember-vcl'"
-  [target]="'_blank'"
-  [label]="'Target _blank link'"></a>
+  [label]="'Disabled link'"
+  [href]="'this is not considered when the link is disabled'"
+  [disabled]="true"></a>
 <br><br>
 
 <h3>Link with title and scheme:</h3>
 <a vcl-link
-  [title]="'link title'"
+  [label]="'I\'m a telephone number schemed link'"
+  [title]="'tel link title'"
   [scheme]="'tel'"
-  [href]="'004971122222222'"
-  [label]="'I\'m a telephone number schemed link'"></a>
+  [href]="'004971122222222'"></a>
 <br><br>
