--- a/src/ng-vcl/date-picker/date-picker.component.html
+++ b/src/ng-vcl/date-picker/date-picker.component.html
@@ -1,7 +1,7 @@
 <div class="vclDataGrid vclDGVAlignMiddle vclDGAlignCentered vclCalendar vclCalInput">
   <div class="vclDGRow">
-    <div class="vclDGCell">
-      <div class="vclToolbar vclLayoutFlex vclLayoutHorizontal vclLayoutJustified vclLayoutCenter" role="menubar" aria-level="1">
+    <div class="vclDGCell vclToolbar">
+      <div class=" vclLayoutFlex vclLayoutHorizontal vclLayoutJustified vclLayoutCenter" role="menubar" aria-level="1">
         <button type="button" class="vclButton vclTransparent vclSquare" (click)="prevMonth()">
               <div class="vclIcogram">
                 <div class="vclIcon fa fa-angle-left" aria-hidden="false" aria-label="previous" role="img"></div>
@@ -20,13 +20,15 @@
   </div>
 
   <ng-container *ngIf="!showYearPick">
-    <div class="vclDGRow">
+    <div *ngIf="displayWeekNumbers || displayWeekdays" class="vclDGRow">
       <div *ngIf="displayWeekNumbers" class="vclDGCell vclCalItem vclOtherMonth">
         {{'week' | loc}}
       </div>
-      <div *ngFor="let day of viewDate.getWeekDays()" class="vclDGCell vclWeekdayLabel" [class.hidden]="!displayWeekdays">
-        {{day | loc}}
-      </div>
+        <div *ngFor="let day of viewDate.getWeekDays()" class="vclDGCell vclWeekdayLabel">
+          <ng-container *ngIf="displayWeekdays">
+            {{day | loc}}
+          </ng-container>
+        </div>
     </div>
 
     <div class="vclDGRow" *ngFor="let week of viewDate.getMonthBlock()">
@@ -38,25 +40,23 @@
       </div>
     </div>
 
-    <div class="vclDGRow">
+    <div *ngIf="displayJumpSelected || displayJumpToday" class="vclDGRow">
       <div class="vclDGCell">
         <div class="vclToolbar vclLayoutFlex vclLayoutHorizontal vclLayoutJustified" role="menubar" aria-level="2">
-          <button type="button" title="go to today" class="vclButton vclTransparent vclLayoutFlex" *ngIf="displayJumpToday" (click)="gotoToday()">
-               <div class=" vclIcogram">
-                 <span class="vclText ">go to today</span>
-               </div>
-             </button>
-          <button type="button" title="go to selected" class="vclButton vclTransparent vclLayoutFlex" *ngIf="displayJumpSelected" (click)="gotoSelected()">
-                <div class=" vclIcogram">
-                  <span class="vclText ">go to selected</span>
-                </div>
-              </button>
+          <button *ngIf="displayJumpToday" type="button" title="go to today" class="vclButton vclTransparent vclLayoutFlex" (click)="gotoToday()">
+            <div class=" vclIcogram">
+              <span class="vclText ">go to today</span>
+            </div>
+          </button>
+          <button *ngIf="displayJumpSelected" type="button" title="go to selected" class="vclButton vclTransparent vclLayoutFlex" (click)="gotoSelected()">
+            <div class=" vclIcogram">
+              <span class="vclText ">go to selected</span>
+            </div>
+          </button>
         </div>
       </div>
     </div>
   </ng-container>
-
-
 
   <ng-container *ngIf="showYearPick">
     <div class="vclDGRow" role="row" *ngFor="let row of viewDate.getYearsBlock()">
@@ -65,5 +65,4 @@
       </div>
     </div>
   </ng-container>
-
 </div>
