popover: enhancements  - rename open to visible  - support template reference variables as target  - provide open(), close() and toggle() methods  - avoid flashing before repositioning  - enable OnPush change detection

--- a/demo/components/month-picker/month-picker.component.html
+++ b/demo/components/month-picker/month-picker.component.html
@@ -19,7 +19,7 @@
   target='#target'
   targetAttachment='bottom right'
   attachment='top right'
-  [(open)]="expanded">
+  [(visible)]="expanded">
   <vcl-month-picker
     [expandable]="true"
     [(expanded)]="expanded"
