token: minor refactoring

--- a/src/ng-vcl/token/token.component.html
+++ b/src/ng-vcl/token/token.component.html
@@ -4,7 +4,7 @@
         title="Remove"
         type="button"
         class="vclTransparent vclButton">
-  <div class="vclIcogram" (tap)="remove()">
+  <div class="vclIcogram" (tap)="remove.emit()">
     <span class="vclIcon fa fa-remove"></span>
   </div>
 </button>
