layer: fix :leave animations & minor refactoring

--- a/src/ng-vcl/layer/layer-container.component.html
+++ b/src/ng-vcl/layer/layer-container.component.html
@@ -1,19 +1,17 @@
 <div 
-  #container
-  *ngIf="layer"
+  #container 
   class="vclLayer"
   [ngClass]="layer.customClass"
   [class.vclTransparent]="layer.transparent"
   [class.vclLayerFill]="layer.fill"
   [class.vclLayerStickToBottom]="layer.stickToBottom"
-  [style.pointer-events]="'all'" 
   [style.z-index]="zIndex + 1"
+  [style.pointer-events]="'all'" 
   role="dialog" 
-  [@boxState]="visible"
   (tap)='triggerOffClick($event)'
   >
   <div class="vclLayerBox" [class.vclLayerGutterPadding]="layer.gutterPadding" [style.pointer-events]="'all'" [style.z-index]="zIndex + 2">
     <div #layerContent></div>
   </div>
 </div>
-<div *ngIf="layer.modal" class="vclLayerCover" [@layerState]="visible" [style.z-index]="zIndex"></div>
+<div *ngIf="layer.modal" class="vclLayerCover" [@layerState]="state" [style.z-index]="zIndex"></div>
