--- a/demo/components/label/demo.component.html
+++ b/demo/components/label/demo.component.html
@@ -4,7 +4,7 @@
 <br/>
 <br/>
 
-<h3>Wrapping Label:</h3>
+<h3>Wrapping Labels:</h3>
 <vcl-label label="Watch my button" subLabel="my button is amazing" class="myclass1 myclass2">
   <button>button</button>
 </vcl-label>
@@ -14,10 +14,9 @@
   <input id="myInput" value="foobar" />
 </vcl-label>
 
-
 <br/>
 <br/>
-<h3>typed labels:</h3>
+<h3>Typed labels:</h3>
 
 Primary:
 <vcl-label label="mylabel" subLabel="with sub" type="primary"></vcl-label>
@@ -26,11 +25,9 @@ Primary:
 <br/> sucess:
 <vcl-label label="mylabel" subLabel="with sub" type="sucess"></vcl-label>
 
-
 <br/>
 <br/> Info:
 <vcl-label label="mylabel" subLabel="with sub" type="info"></vcl-label>
-
 
 <br/>
 <br/> warning:
