[plotly]: update the change handler, wrap some of the plotly functions, display the plot after it has been rendered to the DOM, update README.md

--- a/src/plotly/plotly.component.html
+++ b/src/plotly/plotly.component.html
@@ -1,1 +1,6 @@
-<div id="{{ elementId }}" class="{{ plotClass }}"></div>
+<div [class.vclLayoutHidden]="!afterPlot">
+  <div
+    id="{{ plotId }}"
+    class="{{ plotClass }}">
+  </div>
+</div>
